Updated Repo Details and README manuaveribility

--- a/snapshots/V2.2.md
+++ b/snapshots/V2.2.md
@@ -1,6 +1,8 @@
-### 🧠 PROJECT SNAPSHOT — *Greko VRM Engine *
-
+# 🧠 Project Snapshot — Greko VRM Engine v2.2
 ---
+> **TL;DR:** VRM facial morphs exist in the GLB, but Assimp deletes them due to zero-weight facial bones.  
+> Solution: hybrid loader (Assimp for body, custom loader for face/morphs).
+
 
 ## 🎯 Core Goal
 
@@ -132,7 +134,7 @@ This **is**:
 
 ---
 
-## 🛣️ Chosen Direction — Hybrid Loader Architecture (Decision Made)
+## 🛣️ Chosen Direction — Hybrid Loader Architecture ✅
 
 ### Philosophy
 
