New leap! or whatever

--- a/snapshots/V2.2.md
+++ b/snapshots/V2.2.md
@@ -1,3 +1,12 @@
+# 📸 Snapshot V2.2: The Assimp Wall
+
+> **Status:** Retired. This version led to the creation of the current C++ Native Muscle.
+
+## 🧠 Retrospective Note
+This was the "Breaking Point." We had the MToon shader working and the model looked great, but **Assimp** was a black box that kept eating Kisayo's facial expressions. This version proved that to get a "Soul" (blinking/emotions) into the engine, we had to write our own loader logic.
+
+---
+
 # 🧠 Project Snapshot — Greko VRM Engine v2.2
 ---
 > **TL;DR:** VRM facial morphs exist in the GLB, but Assimp deletes them due to zero-weight facial bones.  
@@ -214,3 +223,7 @@ This will **prove blinking works** and unblock all expression logic.
 🟡 Rendering stable
 🔴 Facial animation blocked (by Assimp)
 🟢 Solution path identified and underway
+
+
+* The **model renders correctly** (geometry, materials, lighting all work).
+* **Assimp treats zero-weight bones as invalid** and deletes them, taking the morphs with them.
